--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="comof.html">Como Funciona?</a>
+        <a href="comof.html">Como Funciona</a>
         <a href="resultados.html">Resultados</a>
         <a href="planos.html">Planos</a>
         <a href="comumnidade.html">Comunidade</a>
@@ -28,7 +28,7 @@
             
             <p class="conteudosecundario">Bem-vindo à nossa plataforma de acompanhamento online, onde a inovação tecnológica se encontra com o cuidado humano para oferecer um serviço verdadeiramente personalizado e eficiente. Nossa missão é ajudar você a alcançar seus objetivos de emagrecimento ou ganho de massa muscular com um plano totalmente adaptado às suas necessidades e metas individuais.</p> 
 
-            <button class="botao">ASSINE JÁ</button>
+            <button class="botao">TRANSFORME SUA VIDA JÁ</button>
 
             
         </div>
