--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Smart-Nutri</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    
 </head>
 <body>
 
@@ -14,8 +15,8 @@
         <p>A platafomra inteligente para transformar seu corpo de forma inteligente e rápida.</p>
     </header>
 
-
-    <nav>
+   
+    <nav id="itens">
         <a href="#">Home</a>
         <a href="#">Como Funciona</a>
         <a href="#">Resultados</a>
@@ -43,6 +44,6 @@
         <p>Site criando por <a href="https://www.linkedin.com/in/lucas-andrade-12941a190/" target="_blank">Lucas Andrade </a>. Site criado para a <a href="https://www.alura.com.br/artigos/imersao-ia?srsltid=AfmBOopaGKsCxj5uPO7jPShn4tplrZd2gG0V3Zd8oLlDS5y0mhXGsdVf" target="_blank">Imersão Dev Gemini</a> 2024</p>
         <p></p>
     </footer>
-    
+   
 </body>
 </html>
